--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -70,7 +70,14 @@
                 margin-left: auto;
                 z-index: 2;
                 width: max-content;
+            @media (min-width: 320px) and (max-width: 400px) {
+                margin-top: 40%;
             }
+            @media (min-width: 401px) and (max-width: 460px) {
+                margin-top: 20%;
+            }
+            }
+            
         }
     }
     
