--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,8 +4,10 @@
 
 .footer__derechos {
         text-align: center;
-        margin-bottom: 20px;
         font-size: 1.2rem;
+        @media (max-width: 480px) {
+            font-size: 1.2rem;
+        }
     }
 
 .footer__redes {
@@ -23,6 +25,12 @@
     justify-content: space-evenly;
     cursor: pointer;
     font-size: 2.3rem;
+    @media (min-width: 320px) and (max-width: 480px) {
+        justify-content: center;
+        align-items: center;
+        font-size: 1.8rem;
+        margin-bottom: -7%;
+    }
         ul {
         display: flex;
         flex-direction: row nowrap;
@@ -33,6 +41,9 @@
             margin-right: 30px;
             margin-left: 30px;
             justify-items: center;
+            @media (min-width: 320px) and (max-width: 480px) {
+              margin: 20px;  
+            }
         }
     }
 }
@@ -42,11 +53,17 @@
     flex-flow: row nowrap;
     justify-content: space-evenly;
     font-size: 1.3rem;
+    @media (min-width: 601px) and (max-width: 904px) {
+        font-size: 1.5rem;
+    }
         ul {
         display: flex;
         flex-flow: row nowrap;
         list-style-type: none;
         justify-content: space-evenly;
+        @media (min-width: 320px) and (max-width: 904px) {
+            display: block;
+        }
             li{
             display: flex;
             flex-flow: row nowrap;
@@ -56,6 +73,12 @@
             margin-right: 60px;
             text-decoration-line: overline 20px;
             margin-bottom: 20px;
+            @media (min-width: 320px) and (max-width: 900px) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 20px;
+            }
         }
     }
 }
