--- a/scss/_formularios.scss
+++ b/scss/_formularios.scss
@@ -1,17 +1,32 @@
 .titulo-contacto {
+    width: 80%;
     margin: 0 auto;
     margin-top: 30px;
     font-size: 2.5rem;
     margin-bottom: 30px;
+    @media (max-width: 400px) {
+        font-size: 2rem;
+    }
 }
 
 .subtitulo-contacto {
+    width: 80%;
+    margin: 0 auto;
     font-size: 2rem;
     margin-bottom: 30px;
+    @media (max-width: 400px) {
+        font-size: 1.5rem;
+    }
 }
 
 .segunda-seccion__centrado {
     @include centrado;
+}
+
+.segunda-seccion {
+    @media (max-width: 400px) {
+    display: none
+    }
 }
 
 form {
@@ -26,9 +41,17 @@ form {
     padding: 20px;
     border-radius: 40px;
     margin-bottom: 60px;
+    @media (max-width: 400px) {
+        font-size: 1rem;
+        border-style: none;
+    }
         label {
         margin-top: 20px;
         margin-bottom: 20px;
+        @media (max-width: 400px) {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
         }
             legend {
             color: white;
@@ -37,18 +60,31 @@ form {
             border: gold;
             border-radius: 20px;
             border-style: dotted;
+            @media (max-width: 400px) {
+                padding: 5px;
+            }
             }
                 fieldset {
                 background-color: #B28228;
                 border-color: #ffe002;
                 border-radius: 20px;
                 padding: 20px;
+                @media (max-width: 400px) {
+                    padding: 10px;
+                }
                 }
                     input {
                     margin: 10px;
+                    @media (max-width: 400px) {
+                        margin: 0 auto;
+                    }
                     }
                         textarea {
                         width: 60%;
                         border-radius: 10px;
+                        @media (max-width: 400px) {
+                            width: 90%;
+                            border-radius: 5px;
+                        }
                         }
 }        
