--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,16 @@
     display: flex;
     width: 8vw;
     border-radius: 50%;
+    @media (min-width: 320px) and (max-width: 400px) {
+        width: 15vw;
+    }
+    @media (min-width: 401px) and (max-width: 600px) {
+        width: 13vw;
+    }
+}
+
+.fa-bars {
+    font-size: 1.5rem;
 }
 
 .nav-link:hover {
