--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -16,13 +16,17 @@
 
 .seccion-dos {
     @include container; 
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    @media (max-width: 480px) {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
     h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-decoration: underline;
-    margin-bottom: 20px;
-    margin-top: 80%;
-    margin: 0 auto;
     @media (max-width: 480px) {
         font-size: 2rem;
         margin: 0 auto;
@@ -33,8 +37,10 @@
 
 .seccion-dos__subtitulo {
     text-align: center;
-    font-size: 2rem;
-    margin: 0 auto;
+    font-size: 1.5rem;
+    @media (max-width: 480px) {
+        font-size: 1.3rem;
+    }
 }
 
 .container-grid {
@@ -73,33 +79,61 @@
 .seccion-dos__boton {
     @include boton;
     @include centrado;
+    @media (max-width: 480px) {
+        margin-top: 10%;
+        margin-bottom: 10%;
+        padding: 10px;
+    }
+        a {
+            font-size: 1.5rem;
+        }
 }
 
 .seccion-tres {
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 5%;
+    margin-bottom: 5%;
     h2{
-    font-size: 40px;
-    margin-bottom: 20px;
-        p{
-        width: 30%;
-        margin: 0 auto;
-        font-size: 80px;
-        border-style: dotted;
-        border-width: 10px;
-        }
+    font-size: 3rem;
+    margin-bottom: 5%;
+    @media (max-width: 480px) {
+        font-size: 2rem;
+    }
+    }
+}
+
+.seccion-tres__span {
+    font-size: 5rem;
+    border-style: dotted;
+    border-width: 10px;
+    padding: 2%;
+    @media (max-width: 480px) {
+        font-size: 3rem;
+        padding: 4%;
     }
 }
 
 .seccion-tres__centrado {
     @include centrado;
+    @include container;
+    @media (max-width: 480px) {
+        margin-top: -20%;
+    }
 }
 
 .seccion-cuatro {
-    margin-top: 80px;
-    margin-bottom: 40px;
+    @include container;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    @media (max-width: 480px) {
+        margin-top: -40px;
+        margin-bottom: 10%;
+    }
         h3{
         text-align: center;
         font-size: 2rem;
+        margin-bottom: 5%;
+        @media (max-width: 480px) {
+            font-size: 1.5rem;
+        }
     }
 }
