--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,25 +1,21 @@
 .titulo-nosotros {
-    font-size: 2rem;
     margin-top: 5%;
     margin-bottom: 40px;
+    @media (max-width: 400px) {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+        h1 {
+        @media (max-width: 400px) {
+            font-size: 2.5rem;
+        } 
+    }
 }
 
 .texto-nosotros {
     font-size: 1.5rem;
-}
-
-.container-nosotros {
-    animation-duration: 5s;
-    animation-name: aparecer;
-    text-align: center;
-    margin-top: 20px;
-    @include container;
-    .container-nosotros__imagen {
-    width: 30%;
-    border-radius: 50%;
-    margin-bottom: 40px;
-    margin-top: 40px;
-    }
 }
 
 @keyframes aparecer {
@@ -42,10 +38,41 @@
         opacity: 1;
     }
 }
-    
+
+.container-nosotros {
+    animation-duration: 5s;
+    animation-name: aparecer;
+    text-align: center;
+    @include container;
+    @media (max-width: 400px) {
+        width: 80%;
+        margin: 0 auto;
+    }
+        .container-nosotros__imagen {
+            width: 30%;
+            border-radius: 50%;
+            margin-bottom: 40px;
+            margin-top: 40px;
+            @media (max-width: 400px) {
+                width: 80%;
+            }
+        }
+}
+   
 .container-nosotros__boton {
     @include boton;
     @include centrado;
     margin-bottom: 5%;
     margin-top: 30px;    
+    @media (max-width: 400px) {
+        width: 80%;
+        margin-top: 10px;
+        margin-bottom: 15%;
+        padding: 10px;
+    }
+        a {
+        @media (max-width: 400px) {
+            font-size: 1.5rem;
+        }
+        }
 }
