modifiqué responsive pág shows

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8000,9 +8000,15 @@ form {
   @media (max-width: 400px) {
     .shows-texto {
       font-size: 2rem; } }
+  @media (max-width: 600px) {
+    .shows-texto {
+      font-size: 2.5rem; } }
 
 .shows-texto__subtitulo {
   font-size: 1.5rem; }
+  @media (max-width: 600px) {
+    .shows-texto__subtitulo {
+      font-size: 2rem; } }
 
 .navbar-shows {
   display: flex;
@@ -8012,6 +8018,10 @@ form {
     list-style-type: none;
     font-size: 1.5rem;
     text-align: center; }
+    @media (min-width: 480px) and (max-width: 600px) {
+      .navbar-shows li {
+        margin: 35px;
+        font-size: 2rem; } }
     @media only screen and (min-device-width: 768px) and (max-device-width: 900px) {
       .navbar-shows li {
         margin: 50px; } }
@@ -8028,7 +8038,7 @@ form {
   grid-template-columns: repeat(2, 50%);
   margin-top: 5%;
   margin-bottom: 5%; }
-  @media (max-width: 400px) {
+  @media (max-width: 600px) {
     .container-grid-shows {
       display: block;
       width: 80%;
@@ -8037,7 +8047,7 @@ form {
       margin-bottom: 10%; } }
   .container-grid-shows .img-shows {
     width: 100%; }
-    @media (max-width: 400px) {
+    @media (max-width: 600px) {
       .container-grid-shows .img-shows {
         margin-bottom: 10%; } }
   .container-grid-shows .texto-img-shows {
@@ -8049,15 +8059,18 @@ form {
     justify-content: center;
     text-align: center;
     font-size: 1.5rem; }
-    @media (max-width: 400px) {
+    @media (max-width: 480px) {
       .container-grid-shows .texto-img-shows {
         font-size: 1.2rem;
+        margin-bottom: 10%; } }
+    @media (max-width: 600px) {
+      .container-grid-shows .texto-img-shows {
         margin-bottom: 10%; } }
   .container-grid-shows .titulo-shows {
     font-size: 2rem;
     color: #ffe002;
     text-transform: uppercase;
     text-decoration: overline underline double; }
-    @media (max-width: 400px) {
+    @media (max-width: 480px) {
       .container-grid-shows .titulo-shows {
         font-size: 1.5rem; } }
