--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -67,8 +67,15 @@ a {
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 768px) {
-    html {
+html {
+    font-size: 18px;
+    @media only screen and (min-device-width: 320px) and (max-device-width: 400px) {
+    font-size: 12px;
+    }
+    @media only screen and (min-device-width: 400px) and (max-device-width: 768px) {
         font-size: 14px;
     }
+    @media only screen and (min-device-width: 768px) and (max-device-width: 900px) {
+        font-size: 16px;
+    }    
 }
