--- a/css/estilos.css
+++ b/css/estilos.css
@@ -289,7 +289,7 @@ button,
 ::-moz-focus-inner {
   padding: 0;
   border-style: none; }
-
+/**
 textarea {
   resize: vertical; }
 
@@ -311,7 +311,7 @@ legend {
       font-size: 1.5rem; } }
   legend + * {
     clear: left; }
-
+**/
 ::-webkit-datetime-edit-fields-wrapper,
 ::-webkit-datetime-edit-text,
 ::-webkit-datetime-edit-minute,
@@ -7506,6 +7506,7 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important; } }
 
+/*Estilos generales*/
 * {
   margin: 0;
   padding: 0;
@@ -7542,6 +7543,8 @@ html {
     html {
       font-size: 16px; } }
 
+/** Estilos header **/
+/*  Estilo logo   */
 .logo {
   display: flex;
   width: 8vw;
@@ -7553,6 +7556,7 @@ html {
     .logo {
       width: 13vw; } }
 
+/*  Estilo links  */
 .fa-bars {
   font-size: 1.5rem; }
 
@@ -7564,6 +7568,7 @@ html {
   border-bottom: 3px solid #ffb606;
   background-color: black; }
 
+/*  Estilo menú y menú hamburguesa  */
 .header-sitio {
   background-color: #1f1d1d;
   padding: 16px; }
@@ -7612,7 +7617,7 @@ html {
       @media (max-width: 1000px) and (min-width: 320px) and (max-width: 400px) {
         .header-sitio .header-container nav:target {
           margin-top: 40%; } }
-      @media (max-width: 1000px) and (min-width: 401px) and (max-width: 460px) {
+      @media (max-width: 1000px) and (min-width: 401px) and (max-width: 600px) {
         .header-sitio .header-container nav:target {
           margin-top: 20%; } }
     .header-sitio .header-container nav {
@@ -7722,6 +7727,8 @@ html {
   margin-top: 5%;
   margin-bottom: 5%; }
   .seccion-tres h2, .seccion-tres .h2 {
+    width: 90%;
+    margin: 0 auto;
     font-size: 3rem;
     margin-bottom: 5%; }
     @media (max-width: 480px) {
@@ -7746,7 +7753,7 @@ html {
   margin: 0 auto; }
   @media (max-width: 480px) {
     .seccion-tres__centrado {
-      margin-top: -20%; } }
+      margin-top: -10%; } }
 
 .seccion-cuatro {
   width: 90%;
@@ -7765,6 +7772,7 @@ html {
       .seccion-cuatro h3, .seccion-cuatro .h3 {
         font-size: 1.5rem; } }
 
+/*Estilos footer*/
 .footer {
   background-color: #1f1d1d; }
 
@@ -7773,7 +7781,9 @@ html {
   font-size: 1.2rem; }
   @media (max-width: 480px) {
     .footer__derechos {
-      font-size: 1.2rem; } }
+      font-size: 1.3rem;
+      width: 90%;
+      margin: 0 auto; } }
 
 .footer__redes {
   text-align: center;
@@ -7790,13 +7800,9 @@ html {
   font-size: 2.3rem; }
   @media (min-width: 320px) and (max-width: 480px) {
     .redes-sociales {
-      justify-content: center;
-      align-items: center;
-      font-size: 1.8rem;
       margin-bottom: -7%; } }
   .redes-sociales ul {
     display: flex;
-    flex-direction: row nowrap;
     justify-content: space-around;
     list-style-type: none; }
     .redes-sociales ul li {
@@ -7817,6 +7823,8 @@ html {
     .menu-footer {
       font-size: 1.5rem; } }
   .menu-footer ul {
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-flow: row nowrap;
     list-style-type: none;
@@ -7840,6 +7848,7 @@ html {
           align-items: center;
           margin: 20px; } }
 
+/*  Estilo página Nosotros  */
 .titulo-nosotros {
   margin-top: 5%;
   margin-bottom: 40px; }
@@ -7918,56 +7927,45 @@ html {
       font-size: 1.5rem; } }
 
 .titulo-contacto {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   margin-top: 30px;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 30px; }
-  @media (max-width: 400px) {
-    .titulo-contacto {
-      font-size: 2rem; } }
 
 .subtitulo-contacto {
   width: 80%;
   margin: 0 auto;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 30px; }
-  @media (max-width: 400px) {
-    .subtitulo-contacto {
-      font-size: 1.5rem; } }
 
 .segunda-seccion__centrado {
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   margin: 0 auto; }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   .segunda-seccion {
     display: none; } }
 
 form {
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
   text-align: center;
   margin-top: 20px;
-  border-style: dotted;
   padding: 20px;
-  border-radius: 40px;
   margin-bottom: 60px; }
   @media (max-width: 400px) {
     form {
-      font-size: 1rem;
-      border-style: none; } }
+      font-size: 1.5rem; } }
   form label {
     margin-top: 20px;
     margin-bottom: 20px; }
-    @media (max-width: 400px) {
-      form label {
-        margin-top: 10px;
-        margin-bottom: 10px; } }
   form legend {
     color: white;
     background-color: black;
@@ -7975,9 +7973,6 @@ form {
     border: gold;
     border-radius: 20px;
     border-style: dotted; }
-    @media (max-width: 400px) {
-      form legend {
-        padding: 5px; } }
   form fieldset {
     background-color: #B28228;
     border-color: #ffe002;
@@ -7985,7 +7980,7 @@ form {
     padding: 20px; }
     @media (max-width: 400px) {
       form fieldset {
-        padding: 10px; } }
+        padding: 15px; } }
   form input {
     margin: 10px; }
     @media (max-width: 400px) {
@@ -7999,25 +7994,29 @@ form {
         width: 90%;
         border-radius: 5px; } }
 
-.shows-texto {
+/** Estilos página Shows**/
+/** Título página shows**/
+.titulo-pag-shows {
   width: 80%;
   margin: 0 auto;
   margin-top: 20px;
   font-size: 2rem;
   margin-bottom: 5px; }
   @media (max-width: 400px) {
-    .shows-texto {
+    .titulo-pag-shows {
       font-size: 2rem; } }
   @media (min-width: 401px) and (max-width: 600px) {
-    .shows-texto {
+    .titulo-pag-shows {
       font-size: 2.5rem; } }
 
-.shows-texto__subtitulo {
+/** Subtítulo página shows**/
+.subtitulo-pag-shows {
   font-size: 1.5rem; }
   @media (min-width: 600px) {
-    .shows-texto__subtitulo {
+    .subtitulo-pag-shows {
       font-size: 2rem; } }
 
+/** Barra de navegación página Shows**/
 .navbar-shows ul {
   width: 80%;
   margin: 0 auto; }
@@ -8026,59 +8025,46 @@ form {
   margin: 15px;
   list-style-type: none;
   font-size: 1.5rem;
-  text-align: center;
-  /**
-        @media (min-width: 320px) and (max-width: 400px) {
-            margin: 22px;
-        }
-        @media (min-width: 400px) and (max-width: 768px) {
-        margin: 13px;
-        }
-        @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
-        margin: 7px;
-        } 
-        **/ }
+  text-align: center; }
   .navbar-shows li a {
     text-decoration-style: wavy; }
     .navbar-shows li a:hover {
       color: #b28228; }
 
 /** Grid página shows  **/
-.container-grid-shows {
+.container-shows {
   width: 90%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 50%);
   margin-top: 5%;
-  margin-bottom: 5%;
-  /**
-    @media (min-width: 900px) {
-        row-gap: 3%;
-        margin-bottom: 80%;
-    }
-    **/ }
+  margin-bottom: 5%; }
   @media (max-width: 900px) {
-    .container-grid-shows {
+    .container-shows {
       display: block;
       width: 80%;
       margin: 0 auto;
       margin-top: 10%;
       margin-bottom: 10%; } }
-  .container-grid-shows .img-shows {
-    width: 100%;
-    /**
-    @media (min-width: 600px) and (max-width: 900px) {
-        display: flex;
-        width: 80vw;
-        height: 80vh;
-        margin: 0 auto;
-        margin-bottom: 10%;
-    }
-    **/ }
-    @media (max-width: 599px) {
-      .container-grid-shows .img-shows {
+  .container-shows .img-shows {
+    width: 100%; }
+    @media (max-width: 900px) {
+      .container-shows .img-shows {
         margin-bottom: 10%; } }
-  .container-grid-shows .texto-img-shows {
+  .container-shows .titulo-shows {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    font-size: 1.5rem;
+    color: #ffe002;
+    text-transform: uppercase;
+    text-decoration: overline underline double; }
+    @media (max-width: 900px) {
+      .container-shows .titulo-shows {
+        font-size: 2rem; } }
+  .container-shows .texto-shows {
     width: 90%;
     margin: 0 auto;
     display: flex;
@@ -8086,28 +8072,8 @@ form {
     flex-wrap: nowrap;
     justify-content: center;
     text-align: center;
-    font-size: 1.5rem; }
-    @media (max-width: 480px) {
-      .container-grid-shows .texto-img-shows {
-        margin-bottom: 10%; } }
-    @media (max-width: 900px) {
-      .container-grid-shows .texto-img-shows {
-        margin-bottom: 10%;
-        font-size: 2rem; } }
-    @media (max-width: 1024px) {
-      .container-grid-shows .texto-img-shows {
-        margin-bottom: 10%;
-        font-size: 1rem; } }
-  .container-grid-shows p {
-    font-size: 1.5rem; }
-    @media (min-width: 901px) and (max-width: 1024px) {
-      .container-grid-shows p {
-        font-size: 1.2rem; } }
-  .container-grid-shows .titulo-shows {
     font-size: 1.5rem;
-    color: #ffe002;
-    text-transform: uppercase;
-    text-decoration: overline underline double; }
-    @media (max-width: 768px) {
-      .container-grid-shows .titulo-shows {
-        font-size: 2rem; } }
+    margin-bottom: 10%; }
+    @media (min-width: 901px) and (max-width: 1024px) {
+      .container-shows .texto-shows {
+        font-size: 1rem; } }
