--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,4 @@
+/*Estilos footer*/
 .footer {
     background-color: $color-fondo-header;
 }        
@@ -6,7 +7,8 @@
         text-align: center;
         font-size: 1.2rem;
         @media (max-width: 480px) {
-            font-size: 1.2rem;
+            font-size: 1.3rem;
+            @include container;
         }
     }
 
@@ -26,14 +28,10 @@
     cursor: pointer;
     font-size: 2.3rem;
     @media (min-width: 320px) and (max-width: 480px) {
-        justify-content: center;
-        align-items: center;
-        font-size: 1.8rem;
         margin-bottom: -7%;
     }
         ul {
         display: flex;
-        flex-direction: row nowrap;
         justify-content: space-around;
         list-style-type: none;
             li {
@@ -57,6 +55,7 @@
         font-size: 1.5rem;
     }
         ul {
+        @include container;
         display: flex;
         flex-flow: row nowrap;
         list-style-type: none;
