--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,5 @@
+/** Estilos header **/
+/*  Estilo logo   */
 .logo {
     display: flex;
     width: 8vw;
@@ -10,6 +12,7 @@
     }
 }
 
+/*  Estilo links  */
 .fa-bars {
     font-size: 1.5rem;
 }
@@ -24,6 +27,7 @@
     background-color: black;
 }
 
+/*  Estilo menú y menú hamburguesa  */
 .header-sitio {
     background-color: $color-fondo-header;
     padding: 16px;
@@ -83,7 +87,7 @@
             @media (min-width: 320px) and (max-width: 400px) {
                 margin-top: 40%;
             }
-            @media (min-width: 401px) and (max-width: 460px) {
+            @media (min-width: 401px) and (max-width: 600px) {
                 margin-top: 20%;
             }
             }
