--- a/scss/_shows.scss
+++ b/scss/_shows.scss
@@ -1,4 +1,6 @@
-.shows-texto {
+/** Estilos página Shows**/
+/** Título página shows**/
+.titulo-pag-shows {
     width: 80%;
     margin: 0 auto;
     margin-top: 20px;
@@ -12,13 +14,15 @@
     }
 }
 
-.shows-texto__subtitulo {
+/** Subtítulo página shows**/
+.subtitulo-pag-shows {
     font-size: 1.5rem;
     @media (min-width: 600px) {
         font-size: 2rem;
     }
 }
 
+/** Barra de navegación página Shows**/
 .navbar-shows {
     ul {
         width: 80%;
@@ -29,17 +33,6 @@
         list-style-type: none;
         font-size: 1.5rem;
         text-align: center;
-        /**
-        @media (min-width: 320px) and (max-width: 400px) {
-            margin: 22px;
-        }
-        @media (min-width: 400px) and (max-width: 768px) {
-        margin: 13px;
-        }
-        @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
-        margin: 7px;
-        } 
-        **/
             a{
             text-decoration-style: wavy;
             &:hover {
@@ -50,7 +43,7 @@
 }
 
 /** Grid página shows  **/
-.container-grid-shows {
+.container-shows {
     @include container;
     display: grid;
     grid-template-columns: repeat(2, 50%);
@@ -63,28 +56,26 @@
         margin-top: 10%;
         margin-bottom: 10%;
     }
-    /**
-    @media (min-width: 900px) {
-        row-gap: 3%;
-        margin-bottom: 80%;
-    }
-    **/
     .img-shows {
     width: 100%;
-    @media (max-width: 599px) {
+    @media (max-width: 900px) {
         margin-bottom: 10%;
     }
-    /**
-    @media (min-width: 600px) and (max-width: 900px) {
-        display: flex;
-        width: 80vw;
-        height: 80vh;
-        margin: 0 auto;
-        margin-bottom: 10%;
     }
-    **/
+    .titulo-shows {
+    @include container;
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    font-size: 1.5rem;
+    color: #ffe002;
+    text-transform: uppercase;
+    text-decoration: overline underline double;
+    @media (max-width: 900px) {
+        font-size: 2rem;
     }
-    .texto-img-shows{
+    }
+    .texto-shows{
     @include container;
     display: flex;
     flex-direction: column;
@@ -92,32 +83,9 @@
     justify-content: center;
     text-align: center;
     font-size: 1.5rem;
-    @media (max-width: 480px) {
-        margin-bottom: 10%;
-    }
-    @media (max-width: 900px) {
-        margin-bottom: 10%;
-        font-size: 2rem;
-    }
-    @media (max-width: 1024px) {
-        margin-bottom: 10%;
+    margin-bottom: 10%;
+    @media (min-width: 901px) and (max-width: 1024px) {
         font-size: 1rem;
-    }
-    }
-        p {
-            font-size: 1.5rem;
-        
-        @media (min-width: 901px) and (max-width: 1024px) {
-            font-size: 1.2rem
-        }
-        }
-    .titulo-shows {
-    font-size: 1.5rem;
-    color: #ffe002;
-    text-transform: uppercase;
-    text-decoration: overline underline double;
-    @media (max-width: 768px) {
-        font-size: 2rem;
     }
     }
 }
