--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,8 +5,8 @@
 
 .footer__derechos {
         text-align: center;
-        font-size: 1.2rem;
-        @media (max-width: 480px) {
+        font-size: 1rem;
+        @media (max-width: 600px) {
             font-size: 1.3rem;
             @include container;
         }
@@ -14,9 +14,8 @@
 
 .footer__redes {
     text-align: center;
-    font-size: 1.2rem;
-
-    @media (max-width: 480px) {
+    font-size: 1rem; 
+    @media (max-width: 601px) {
         display: none;
     }
 }
@@ -26,9 +25,12 @@
     flex-flow: row nowrap;
     justify-content: space-evenly;
     cursor: pointer;
-    font-size: 2.3rem;
+    font-size: 2rem;
     @media (min-width: 320px) and (max-width: 480px) {
         margin-bottom: -7%;
+    }
+    @media (min-width: 480px) and (max-width: 600px) {
+        margin-top: 5%;
     }
         ul {
         display: flex;
@@ -50,17 +52,13 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
-    font-size: 1.3rem;
-    @media (min-width: 601px) and (max-width: 904px) {
-        font-size: 1.5rem;
-    }
+    font-size: 1.2rem;
         ul {
-        @include container;
         display: flex;
         flex-flow: row nowrap;
         list-style-type: none;
         justify-content: space-evenly;
-        @media (min-width: 320px) and (max-width: 904px) {
+        @media (min-width: 320px) and (max-width: 980px) {
             display: block;
         }
             li{
@@ -72,7 +70,7 @@
             margin-right: 60px;
             text-decoration-line: overline 20px;
             margin-bottom: 20px;
-            @media (min-width: 320px) and (max-width: 900px) {
+            @media (min-width: 320px) and (max-width: 980px) {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
